[gd_scene load_steps=4 format=3 uid="uid://74q2uoc27b3"]

[ext_resource type="TileSet" uid="uid://bl2o7yp2wf0hx" path="res://Assets/tilemap.tres" id="1_is2j5"]
[ext_resource type="Script" uid="uid://djuqwvcx46dc5" path="res://Scripts/music_comet.gd" id="1_jmgrn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d4vbh"]
size = Vector2(16, 17)

[node name="MusicComet" type="Area2D"]
z_index = 1
script = ExtResource("1_jmgrn")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 11, 0, 12, 0, 0, 0)
tile_set = ExtResource("1_is2j5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_d4vbh")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
